--- a/reworked/demo.html
+++ b/reworked/demo.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>SS14Tools</title>
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </head>
@@ -36,10 +36,7 @@
                 <div class="row py-5">
                     <div class="col-xl-9">
                         <select class="form-select" aria-label="Реакция">
-                            <option selected><p class="gx-5">Выберите (бля а что мы конкретно выбираем)</p></option>
-                            <option value="1">Пример 1</option>
-                            <option value="2">Пример 2</option>
-                            <option value="3">Пример 3</option>
+                            <option selected><p class="gx-5">💊 Дермалин</p></option>
                         </select>
                     </div>
                     <div class="container-fluid col">
@@ -60,6 +57,42 @@
                             <label class="btn btn-outline-primary" for="1000">1000</label>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Составляющее</th>
+                                <th scope="col">Рецепт составляющего</th>
+                                <th scope="col">Количество</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="table-info">
+                                <td colspan="2">Кислород</td>
+                                <td>100</td>
+                            </tr>
+                            <tr class="table-info">
+                                <td colspan="2">Фосфор</td>
+                                <td>100</td>
+                            </tr>
+                            <tr class="table-warning">
+                                <td>Келотан</td>
+                                <td><i class="bi bi-arrow-down"></i></td>
+                                <td>100</td>
+                            </tr>
+                            <tr class="table-warning">
+                                <td><i class="bi bi-arrow-up"></i></td>
+                                <td>Кремний</td>
+                                <td>50</td>
+                            </tr>
+                            <tr class="table-warning">
+                                <td><i class="bi bi-arrow-up"></i></td>
+                                <td>Углерод</td>
+                                <td>50</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </center>
