justuser — Сегодня, в 20:45 Рецепт составляющего не нужен, много мороки будет.

--- a/reworked/demo.html
+++ b/reworked/demo.html
@@ -63,33 +63,21 @@
                         <thead>
                             <tr>
                                 <th scope="col">Составляющее</th>
-                                <th scope="col">Рецепт составляющего</th>
                                 <th scope="col">Количество</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-info">
-                                <td colspan="2">Кислород</td>
+                            <tr>
+                                <td>Кислород</td>
                                 <td>100</td>
                             </tr>
-                            <tr class="table-info">
-                                <td colspan="2">Фосфор</td>
+                            <tr>
+                                <td>Фосфор</td>
                                 <td>100</td>
                             </tr>
-                            <tr class="table-warning">
+                            <tr>
                                 <td>Келотан</td>
-                                <td><i class="bi bi-arrow-down"></i></td>
                                 <td>100</td>
-                            </tr>
-                            <tr class="table-warning">
-                                <td><i class="bi bi-arrow-up"></i></td>
-                                <td>Кремний</td>
-                                <td>50</td>
-                            </tr>
-                            <tr class="table-warning">
-                                <td><i class="bi bi-arrow-up"></i></td>
-                                <td>Углерод</td>
-                                <td>50</td>
                             </tr>
                         </tbody>
                     </table>
