Просто сделай 2 вкладки под это.

--- a/reworked/demo.html
+++ b/reworked/demo.html
@@ -59,6 +59,14 @@
                     </div>
                 </div>
                 <div class="row">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Рецепт</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Эффекты и дебафы</a>
+                        </li>
+                    </ul>
                     <table class="table">
                         <thead>
                             <tr>
