--- a/reworked/demo.html
+++ b/reworked/demo.html
@@ -75,18 +75,9 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Кислород</td>
-                                <td>100</td>
-                            </tr>
-                            <tr>
-                                <td>Фосфор</td>
-                                <td>100</td>
-                            </tr>
-                            <tr>
-                                <td>Келотан</td>
-                                <td>100</td>
-                            </tr>
+                            <tr><td>Кислород</td><td>100</td></tr>
+                            <tr><td>Фосфор</td><td>100</td></tr>
+                            <tr><td>Келотан</td><td>100</td></tr>
                         </tbody>
                     </table>
                 </div>
